syntax = "proto3";
package splitspectre;

service Agent {
    // This is where we will create the function signatures
    rpc GetSecretKey (GetSecretKeyRequest) returns (GetSecretKeyResponse) {}
    rpc Encrypt (EncryptRequest) returns (EncryptResponse) {}
    rpc Decrypt (DecryptRequest) returns (DecryptResponse) {}
}

message GetSecretKeyRequest {
}

message GetSecretKeyResponse {
    // Return the keyid of the secret type.
    uint64 keyid = 1;
}

message EncryptRequest {
    bytes msg = 1;      // PlainText
    uint64 keyid = 2;   // Secret KeyId
}

message EncryptResponse {
    bytes cipher = 1;
}

message DecryptRequest {
    bytes cipher = 1;
    uint64 keyid = 2;
}

message DecryptResponse {
    bytes msg = 1;
}

